# jaeger_stats

./: .gitignore  Cargo.toml  README.md  pyproject.toml  stitched.bincode
.github/workflows/: ci.yml
examples/: build_trace.rs  check_count_ref.rs  collect_raw_error_info.rs  collect_span_tags.rs  graph.rs  load_stitched.rs  mermaid.rs  mermaid_stitched.rs  regenerate.rs  regenerate_pretty.rs  regex_test.rs  show_datetime.rs  stitch.rs  tailcall.rs  test_cchain_cache.rs  test_datetime.rs  trace_analysis.rs
src/: anal.rs  analyse.rs  aux.rs  call_chain.rs  callchain.rs  cchain_cache.rs  cchain_stats.rs  data.rs  datetime.rs  frequency.rs  hash.rs  lib.rs  method_stats.rs  process_map.rs  rate.rs  raw_jaeger.rs  read.rs  read_jaeger.rs  report.rs  span.rs  stats.rs  stats_json.rs  stitch.rs  trace.rs  traceext.rs
src/aux/: comma_float.rs  counted.rs  datetime.rs  file.rs  linear_reg.rs  mod.rs  rate.rs  report.rs  time_stats.rs
src/graph/: build_graph.rs  fix_callchain.rs  id_mapper.rs  mod.rs  process_node.rs  process_node_type.rs
src/main/: dotgraph.rs  mermaid.rs  show_traces.rs  stitch.rs  trace_analysis.rs
src/mermaid/: counted_prefix.rs  diagram.rs  mod.rs  scope.rs  trace_data.rs  trace_forrest.rs  trace_node.rs  trace_paths.rs  trace_tree.rs  traces_tree.rs  tt_utils.rs
src/mermaid/flowchart/: escape_name.rs  link.rs  mermaid.rs  mod.rs  sub_graph.rs
src/mermaid/service_oper_graph/: call_descriptor.rs  compact_link.rs  edge_value_selector.rs  link_type.rs  mod.rs  node_select.rs  operation.rs  position.rs  service.rs  service_oper_graph.rs  service_oper_type.rs  sog.rs
src/processed/: mod.rs  process_map.rs  span.rs  trace.rs  unify_operation.rs
src/raw/: file_tracker.rs  jaeger.rs  mod.rs  read_folder.rs  read_jaeger.rs  write.rs
src/stats/: error_stats.rs  method_stats.rs  mod.rs  operation_stats.rs  proc_oper_stats.rs  stats.rs  stats_rec.rs  traceext.rs  traceextvec.rs
src/stats/call_chain/: call.rs  call_chain.rs  cchain_cache.rs  cchain_stats.rs  expected_roots.rs  file.rs  mod.rs
src/stats/file/: bincode.rs  json.rs  mod.rs  operation_stats_json.rs  stats_json.rs
src/stats/json/: mod.rs  stats_json.rs
src/stitch/: anomalies.rs  api.rs  call_chain_data.rs  call_chain_reporter.rs  csv_file.rs  dataseries.rs  inbound_prefix_idx.rs  key.rs  method_stats_reporter.rs  mod.rs  proc_oper_stats_reporter.rs  stats_rec_reporter.rs  stitch_list.rs  stitch_tables.rs  stitched.rs  stitched_line.rs  stitched_set.rs
src/stitch/api/: data_set.rs  inbound_prefix_idx.rs  mermaid.rs  mod.rs  proc_oper_graph.rs  scope.rs  selection.rs  stitched_data_set.rs  types.rs  utils.rs
src/stitch/legacy/: call_chain_data.rs  exponential_regr.rs  lineair_regr.rs  mod.rs  stitched.rs  stitched_line.rs  stitched_set.rs
src/trace_analysis/: dedup.rs  edge_value.rs  mermaid.rs  mod.rs  read.rs  stats.rs
src/trace_analysis/api/: mermaid.rs  mod.rs  utils.rs  (+1 more)
src/utils/: counted.rs  csv_file.rs  datetime.rs  file.rs  fs.rs  linear_reg.rs  mod.rs  rate.rs  time_stats.rs
src/view_api/: file.rs  mermaid_scope.rs  metric.rs  mod.rs  proc_list_utils.rs  types.rs  version.rs  view_error.rs  viewer.rs
(+34 files in other folders)
