[package]
name = "jaeger_stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
datetime = "0.5.2"
encoding_rs = "0.8.32"
serde = { version="1.0", features=["derive"] }
serde_json = { version="1.0"}
