[package]
name = "jaeger_stats"
version = "0.1.0"
about = "Parsing and analyzing Jaeger traces to extract statistics and call-chains"
author = "Cees van Kemenade"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.3.14", features = ["derive"] }
datetime = "0.5.2"
encoding_rs = "0.8.32"
fasthash = "0.4.0"
lazy_static = "1.4.0"
regex = "1.9.1"
serde = { version="1.0", features=["derive"] }
serde_json = { version="1.0"}
