[package]
name = "jaeger_stats"
version = "0.2.2"
about = "Parsing and analyzing Jaeger traces to extract statistics and call-chains"
author = "Cees van Kemenade"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
chrono = "0.4.26"
clap = { version = "4.3.14", features = ["derive"] }
datetime = "0.5.2"
encoding_rs = "0.8.32"
fxhash = "0.2.1"
lazy_static = "1.4.0"
regex = "1.9.1"
serde = { version="1.0", features=["derive"] }
serde_json = { version="1.0"}

[lib]
path = "src/lib.rs"

[[bin]]
name = "trace_analysis"
path = "src/main/trace_analysis.rs"

[[bin]]
name = "stitch"
path = "src/main/stitch.rs"

[[bin]]
name = "show_traces"
path = "src/main/show_traces.rs"

[[bin]]
name = "dotgraph"
path = "src/main/dotgraph.rs"
