[build-system]
requires = ["maturin>=1.0,<2.0"]

build-backend = "maturin"

[project]
name = "jaeger_stats"
version = "0.2.2b1"
description = "Check configuration files."
authors = [{ name = "Cees van Kemenade", email = "cees.van.kemenade@gmail.com" }]
maintainers = [{ name = "Cees van Kemenade", email = "cees.van.kemenade@gmail.com" }]
requires-python = ">=3.7"
keywords = ["automation", "configuration"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Repository = "https://github.com/cvkem/jaeger_stats"

[tool.maturin]
bindings = "bin"
profile = "release"
manifest-path = "Cargo.toml"
module-name = "jaeger_stats"
strip = true
